# seasonal_outlook

./: .gitignore  README.md  codex_east_asia_climate_indices_impl_plan.md  pyproject.toml
config/: system.toml
inputs/climate_factor_reports/: 2026-04-15.toml
inputs/climate_factors/: 2026-04-15.toml
inputs/data_inventory/: 수집자료_가용범위_요약.md
inputs/dynamic_priors/: 2026-04-15.toml
inputs/observed_symbols/: 남한_월별_실황_기호화.md
reports/2026-04-15/: briefing.md  briefing_ko.md  c3s_multisystem_analysis_ko.md  c3s_multisystem_slides_ko.html  c3s_product_metadata.json  climate_factor_context.json  climate_factor_outlook_ko.md  tercile_probabilities.json
reports/2026-04-16/: briefing.md  briefing_ko.md  climate_factor_context.json  climate_factor_outlook_ko.md  objective_forecast_ko.md  objective_model_training_ko.md  tercile_probabilities.csv  tercile_probabilities.json  내일_작업_런북_ko.md
src/seasonal_outlook/: __init__.py  c3s_pdf.py  cli.py  climate_factor_pdf.py  climate_factor_report.py  config.py  data_inventory.py  engine.py  models.py  objective_forecast.py  observed_symbols.py  pdf_publish.py  png.py  psl_indices.py  render.py  validate.py
state/: README.md  candidate_scorecard.toml  current_scorecard.toml  results_ledger.jsonl
tests/: test_cli_objective.py  test_engine.py
