[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seasonal-outlook"
version = "0.1.0"
description = "Objective East Asia and Korean Peninsula seasonal outlook pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = [
    "catboost>=1.2",
    "lightgbm>=4.6",
    "matplotlib>=3.8",
    "numpy>=2.0",
    "pandas>=2.2",
    "reportlab>=4.0",
    "requests>=2.31",
    "scikit-learn>=1.8",
    "svglib>=1.5",
    "xgboost>=3.2",
]

[project.scripts]
seasonal-outlook = "seasonal_outlook.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
